Enhance README with game details and instructions
Expanded the README to provide detailed game information, requirements, running instructions, controls, and notes.